--- a/instruction-set.html
+++ b/instruction-set.html
@@ -98,24 +98,16 @@ JP address
                     <td>Jump if overflow</td>
                 </tr>
                 <tr>
-                    <td>JNO</td>
-                    <td>Jump if no overflow</td>
-                </tr>
-                <tr>
                     <td>JZ</td>
                     <td>Jump if zero or equal</td>
-                </tr>
-                <tr>
-                    <td>JNZ</td>
-                    <td>Jump if no zero or not equal</td>
                 </tr>
             </tbody>
         </table>
         <b>Print Command</b>
         <p>Prints a string or an integer.</p>
 <pre>
-PRINTS address
-PRINTD address
+PRNS [address]
+PRND [address]
 </pre>
 <b>Code Example:</b>
 <pre>
@@ -134,7 +126,7 @@ j: db 30        ;char j = 30;
 k: db 0         ;char k = 0;
 start: cp [k], [i]	;k = i;
 sub [k], [j]	;k -= j;
-printd [k]	;printf(“%d”, k);
+prnd [k]	;printf(“%d”, k);
 </pre>
 
 <b>loop example:</b>
