--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div class="container" style="width:auto">
         <div class="alert alert-danger" ng-hide="error === ''">{{ error }}</div>
         <div class="row">
-            <div class="col-lg-5 col-md-4">
+            <div class="col-lg-5 col-md-4" style="overflow-y:auto">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">Simple Pseudo Language - Instruction Set Help</h4>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body" style="max-height:799px; overflow-y:auto;">
                         <h4>Introduction</h4>
                         <p>This simulator provides a simplified assembler syntax.</p>
                         <p>The simulator consists of a 8-bit cpu and 256 bytes of memory. All instructions (code) and variables (data) needs to fit inside the memory. For simplicity every instruction (and operand) is 1 byte. Therefore a MOV instruction will use 3 bytes of memory. The simulator provides a console output which is memory mapped from 0xE8 to 0xFF. Memory mapped means that every value written to this memory block is visible on the console.</p>
@@ -223,23 +223,13 @@ end:
                                  </div>
                             </div>
                         </div>
-                        <p style="margin-top:5px;">
-                            <small>
-                                <span style="margin-left:5px;">Instructions:</span>
-                                <a ng-click="displayInstr = true" ng-hide="displayInstr">Show</a>
-                                <a ng-click="displayInstr = false" ng-show="displayInstr">Hide</a>
-                                <span style="margin-left:5px;">View:</span>
-                                <a ng-click="displayHex = true" ng-hide="displayHex">Hex</a>
-                                <a ng-click="displayHex = false" ng-show="displayHex">Decimal</a>
-                            </small>
-                        </p>
                     </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">Labels</h4>
                     </div>
-                    <div class="panel-body source-code">
+                    <div class="panel-body source-code" style="max-height:135px;overflow-y:auto;">
                         <table class="table table-condensed table-striped codelabels">
                             <tr>
                                 <th>Name</th>
