--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ CFP [dest], [pointer]
 'dest' now has 3.
                         </pre>
                         <b>CFP - Copy from a pointer</b>
-                        <p>Copy a value from a poiter to the destination memory address.</p>
+                        <p>Copy a value from a pointer to the destination memory address.</p>
                         <pre>
 CFP [address_dest], [pointer]
                         </pre>
